<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_horizontal_margin"
        android:layout_marginTop="@dimen/dimen_horizontal_margin"
        android:text="@string/title_notification" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_horizontal_margin">

        <CheckBox
            android:id="@+id/dailyRemind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_daily_reminder" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_horizontal_margin">

        <CheckBox
            android:id="@+id/releaseRemind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_release_today_notification" />
    </android.support.v7.widget.CardView>



</LinearLayout>