<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    cardCornerRadius="4dp">
    <RelativeLayout
        android:id="@+id/base_card_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:id="@+id/img_item_photo"
            android:layout_marginBottom="4dp"
            tools:src="@color/colorAccent"/>
        <TextView
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/american_ninja"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="8dp"
            />
        <TextView
            android:layout_below="@id/tv_item_name"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:id="@+id/tv_item_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/remarks"
            android:maxLines="2"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_below="@id/tv_item_remarks"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Tue, 12 Augustus 2018"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/detail"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
        <Button

            android:id="@+id/btn_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/btn_detail"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</android.support.v7.widget.CardView>